header item alignment fixed

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -11,7 +11,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    width: 20%;
+    width: 30%;
 }
 
 .green-text, 
